# avina

./: .deny.toml  .mariadb.cnf  .spellcheck.dic  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.cargo-husky/hooks/: pre-push
.github/: zizmor.yml
.github/workflows/: audit.yml  commit.yml  label.yml  lint.yml  stale.yml  test.yml  workflow.yml
.sqlx/: query-05513ce253efc6f7b247948c78da918f8d1973fe6fb328b9553cd919b5d96b48.json  query-3cbc532482f6c55accc1bfd84c45aae4b6a34d958b70c135430e1ebb11b7168b.json  query-3dbe5b332ad59982c3980009c2309cc6cdad8769a06334a055f5bc58379b15a7.json  query-49e94cca3778afe58d3d09d8c3912ecf4572f0023e0e4e2f269a2a64d6ba6c73.json  query-5628a918194170c20a053f02e6730545e876f57d5fc7a33839422d44b36ba3a4.json  query-613f551d429a0907e36b80cc378686a5445a44149a521ee87e470cbc46762911.json  query-7cf2d64b957c3d11c1b3e7846c43984aae7bab2b2008ecf6cc151dc394889681.json  query-901c54417e0ebd68cde90d3a36ae36e96680b72e4c8a42acbd046bd7e3abac5e.json  query-a2f92f96ed24938097ed0cd29123fefce6defe767d4ce02218066b0e7c1b24cd.json  query-a38fd720713af4e8184e4974c729ae69f60fcb472ea3125b86a2ca4490ea73a1.json  query-c990d584c45226181ef6a78a1e6320aa6d13b31c78e0f5a0586439a71147259f.json  query-fcb474241ba1e5d7fa95006c01761f5912ecc966ebc182d3325dcf54012e5f3b.json
api/: Cargo.toml  Dockerfile  README.md  build.rs
api/assets/: bill.typ.j2
api/configuration/: base.yaml  production.yaml
api/src/: authentication.rs  authorization.rs  configuration.rs  error.rs  ldap.rs  lib.rs  main.rs  openstack.rs  startup.rs  telemetry.rs  utils.rs
api/src/database/: mod.rs
api/src/database/accounting/: mod.rs  server_state.rs
api/src/database/budgeting/: mod.rs  project_budget.rs  user_budget.rs
api/src/database/pricing/: flavor_price.rs  mod.rs
api/src/database/quota/: flavor_quota.rs  mod.rs
api/src/database/resources/: flavor.rs  flavor_group.rs  mod.rs
api/src/database/user/: mod.rs  project.rs  user.rs
api/src/routes/: bill.rs  health_check.rs  hello.rs  mod.rs
api/src/routes/accounting/server_consumption/: get.rs
api/src/routes/accounting/server_cost/: get.rs
api/src/routes/accounting/server_state/: create.rs  import.rs  list.rs  modify.rs
api/src/routes/budgeting/: mod.rs  over_tree.rs
api/src/routes/budgeting/project_budget/: list.rs  modify.rs
api/src/routes/budgeting/user_budget/: list.rs  modify.rs
api/src/routes/pricing/flavor_price/: list.rs  modify.rs
api/src/routes/quota/: mod.rs
api/src/routes/resources/: mod.rs  usage.rs
api/src/routes/user/: import.rs  me.rs  mod.rs  sync.rs
api/tests/api/: health_check.rs
api/tests/api/hello/: admin.rs  user.rs
cli/: Cargo.toml
cli/src/: bill.rs  main.rs  pricing.rs
cli/src/accounting/: server_consumption.rs  server_cost.rs  server_state.rs
cli/src/budgeting/: project_budget.rs  user_budget.rs
cli/src/resources/: flavor.rs  flavor_group.rs
cli/src/user/: project.rs  user.rs
lib/: Cargo.toml  README.md
lib/src/: bill.rs  lib.rs  pricing.rs  token.rs
lib/src/accounting/: server_consumption.rs  server_cost.rs  server_state.rs
lib/src/budgeting/: budget_over_tree.rs  project_budget.rs  user_budget.rs
lib/src/quota/: flavor_quota.rs
lib/src/resources/: flavor.rs  flavor_group.rs  usage.rs
lib/src/user/: project.rs  user.rs
panel/: AUTHORS  MANIFEST.in  README.md  setup.cfg
panel/avinapanel/api/: __init__.py  api.py
panel/avinapanel/content/avinapanel/: panel.py  urls.py  views.py
panel/avinapanel/content/avinapanel/templates/avinapanel/: index.html
panel/avinapanel/enabled/: _30900_avinapanel.py
scripts/: build_api_container.sh  build_container.sh  build_ui_container.sh  init_db.sh  run_api.sh  run_api_container.sh  run_ui.sh  run_ui_prod.sh  run_ui_wrapper.sh
test/: Cargo.toml
test/src/: lib.rs
test/tests/accounting/: mod.rs
test/tests/accounting/server_cost/: get.rs
test/tests/accounting/server_state/: create.rs  list.rs  modify.rs
test/tests/budgeting/project_budget/: mod.rs  modify.rs
test/tests/budgeting/user_budget/: modify.rs
test/tests/pricing/flavor_price/: delete.rs  list.rs
test/tests/user/: mod.rs
test/tests/user/project/: create.rs  delete.rs  list.rs  modify.rs
ui/: Cargo.toml  Dockerfile  README.md
ui/assets/: dx-components-theme.css
ui/src/: common.rs  main.rs  typst_wrapper.rs
ui/src/components/: charts.rs  mod.rs
ui/src/components/button/: component.rs
ui/src/components/dialog/: component.rs
ui/src/pages/: budget.rs  hello.rs  mod.rs  prices.rs  profile.rs  usage.rs
ui/src/pages/budget/: all.rs  mod.rs  project.rs  user.rs
wire/: Cargo.toml
wire/src/: bill.rs  common.rs  error.rs  hello.rs  lib.rs  pricing.rs  quota.rs
wire/src/accounting/: mod.rs  server_consumption.rs  server_cost.rs  server_state.rs
wire/src/budgeting/: budget_bulk_create.rs  budget_over_tree.rs  mod.rs  project_budget.rs  user_budget.rs
wire/src/resources/: flavor.rs  flavor_group.rs  mod.rs  usage.rs
wire/src/user/: mod.rs  project.rs  user.rs
wrapper/: README.md  app.py
wrapper/templates/: index.html
(+19 files in other folders)
