[metadata]
name = avinapanel
summary = An OpenStack Horizon panel plugin to embed avina in LRZ's Compute Cloud.
description-file =
    README.md
author = Sandro-Alessio Gierens
author_email = gierens@lrz.de
home-page = https://github.com/LRZ-BADW/avina/panel
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
    avinapanel
