[package]
name = "avina-test"
version = "0.7.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "avina_test"
path = "src/lib.rs"

[[test]]
name = "main"
path = "tests/main.rs"

[[bench]]
name = "main"
harness = false

[dependencies]
avina = { version = "2.1", path = "../lib" }
avina-api = { version = "1.1", path = "../api" }
avina-wire = { version = "2.1", path = "../wire" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
once_cell = "1"
wiremock = "0.6"
rand = "0.9"
chrono = "0.4"
anyhow = "1.0"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "mysql",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
cargo-husky = { workspace = true }
bencher = "0.1"
futures = "0.3"
