[package]
name = "avina-ui"
description = "Rust web UI for the LRZ-specific features of the Openstack-based LRZ Compute Cloud."
authors = ["Sandro-Alessio Gierens <sandro@gierens.de>"]
categories = ["web-programming"]
edition = "2024"
homepage = "https://github.com/LRZ-BADW/avina"
repository = "https://github.com/LRZ-BADW/avina"
exclude = []
readme = "README.md"
license = "MIT"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack"] }
avina = { version = "1.8", path = "../lib" }
typst = "0.13.1"
typst-pdf = "0.13.1"
typst-kit = { version = "0.13.1", default-features = false, features = ["fonts"] }
# zune-inflate = { version = "0.2.54", default-features = false, features = [
#   "gzip",
#   "std",
# ] }
# tar = "0.4.44"
# ureq = "3.0.12"
time = "0.3.41"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]
