[package]
name = "avina-wire"
description = "Rust types for API communication of the LRZ-specific features of the Openstack-based LRZ Compute Cloud."
authors = ["Sandro-Alessio Gierens <sandro@gierens.de>"]
categories = ["web-programming"]
edition = "2024"
homepage = "https://github.com/LRZ-BADW/avina"
repository = "https://github.com/LRZ-BADW/avina"
exclude = []
readme = "README.md"
license = "MIT"
version = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "avina_wire"
path = "src/lib.rs"

[features]
default = ["all"]
all = ["accounting", "budgeting", "hello", "pricing", "quota", "resources", "user"]
accounting = []
budgeting = []
hello = []
pricing = []
quota = []
resources = []
user = []
sqlx = ["dep:sqlx"]
tabled = ["dep:tabled"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tabled = { version = "0.20", optional = true }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["macros", "mysql"], optional = true }
strum = { version = "0.27", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
thiserror = "2.0"
uuid = { version = "1.19", features = ["v4", "serde"] }

[dev-dependencies]
cargo-husky = { workspace = true }
